Added routing logic, filter logic for binding, implemented ng-view in main page, and applied basic bootstrap css for some look and feel.

--- a/src/app.yaml
+++ b/src/app.yaml
@@ -13,6 +13,9 @@ handlers:
   
 - url: /css
   static_dir: css
+
+- url: /partials
+  static_dir: partials
   
 - url: /.*
   script: main.application
